# glslang

./: .appveyor.yml  .clang-format  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .gn  .travis.yml  Android.mk  BUILD.bazel  BUILD.gn  BuildLinux.sh  BuildLinuxCMake.sh  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  ChooseMSVCCRT.cmake  DEPS  HOWTO-build-wasm.md  LICENSE.txt  LinuxDoAll.bash  README-spirv-remap.txt  README.md  README.txt  REUSE.toml  SECURITY.md  SetupLinux.sh  StandAlone _vs2010.sln  StandAlone.sln  StandAlone.vcproj  StandAlone.vcxproj  StandAlone.vcxproj.filters  StandAlone_vs2010.vcxproj  StandAlone_vs2013.sln  StandAlone_vs2013.vcxproj  Todo.txt  build_info.h.tmpl  build_info.py  build_vars.cmake  glslang.vcproj  (+12 more)
.github/: auto-issue-template.md
.github/workflows/: autoupdate.yaml  codeql-analysis.yml  continuous_deployment.yml  continuous_integration.yml  reuse-compliance.yml  scorecard.yml
BIL/: Bil.h  BilBuilder.cpp  BilBuilder.h  BilDisassemble.cpp  BilDisassemble.h  BilDoc.cpp  BilDoc.h  Bir.h  CMakeLists.txt  GLSL450Lib.h  GlslangToBil.cpp  GlslangToBil.h
Install/Linux/: README.txt  glslangValidator  install
Install/Windows/: README.txt
LICENSES/: Apache-2.0.txt  Bison-exception-2.2.txt  LicenseRef-NVIDIA-MIT.txt
OGLCompilersDLL/: CMakeLists.txt  InitializeDll.cpp  InitializeDll.h  Makefile
SPIRV/: CMakeLists.txt  GLSL.ext.AMD.h  GLSL.ext.ARM.h  GLSL.ext.EXT.h  GLSL.ext.KHR.h  GLSL.ext.NV.h  GLSL.ext.QCOM.h  GLSL450Lib.h  GlslangToSpv.cpp  GlslangToSpv.h  InReadableOrder.cpp  Logger.cpp  Logger.h  NonSemanticDebugBreak.h  NonSemanticShaderDebugInfo.h  SPVRemapper.cpp  SPVRemapper.h  SpvBuilder.cpp  SpvBuilder.h  SpvPostProcess.cpp  SpvTools.cpp  SpvTools.h  disassemble.cpp  disassemble.h  doc.cpp  doc.h  hex_float.h  spirv.h  spirv.hpp  spirv.hpp11  spirv.pc.cmake.in  spirv.pc.in  spvIR.h  spvUtil.h
SPIRV/CInterface/: spirv_c_interface.cpp
StandAlone/: CMakeLists.txt  DirStackFileIncluder.h  Makefile  ResourceLimits.cpp  ResourceLimits.h  StandAlone.cpp  Worklist.h  resource_limits_c.cpp  resource_limits_c.h  sample.frag  sample.frag.out  sample.vert  sample.vert.out  spirv-remap.cpp
Test/: 100.conf  100.frag  100Limits.vert  100scope.vert  110scope.vert  120.frag  120.vert  120texarray.frag  130.frag  140.frag  140.vert  150.frag  150.geom  150.tesc  150.vert  300.frag  300.vert  300BuiltIns.frag  300block.frag  300layout.frag  300layout.vert  300operations.frag  300scope.vert  310.comp  310.frag  310.geom  310.tesc  310.tese  310.vert  310AofA.vert  320.geom  320.tesc  320.tese  330.frag  400.frag  400.geom  400.tesc  400.tese  410.geom  420.comp  (+503 more)
Test/baseAtomicCounter/: hlsl.structbuffer.append.fn.frag.out  hlsl.structbuffer.append.frag.out  hlsl.structbuffer.floatidx.comp.out  hlsl.structbuffer.fn.frag.out  hlsl.structbuffer.incdec.frag.out
Test/baseEmbeddedCounter/: hlsl.structbuffer.append.fn.frag.out  hlsl.structbuffer.append.frag.out  hlsl.structbuffer.floatidx.comp.out  hlsl.structbuffer.fn.frag.out  hlsl.structbuffer.incdec.frag.out
Test/baseLegalResults/: hlsl.aliasOpaque.frag.out  hlsl.array.flatten.frag.out  hlsl.flattenOpaque.frag.out  hlsl.flattenOpaqueInit.vert.out  hlsl.flattenOpaqueInitMix.vert.out  hlsl.flattenSubset.frag.out  hlsl.flattenSubset2.frag.out  hlsl.partialFlattenLocal.vert.out  hlsl.partialFlattenMixed.vert.out  hlsl.samplecmp.dualmode.frag.out
Test/baseResults/: 100.frag.out  100Limits.vert.out  100LimitsConf.vert.out  120.frag.out  (+1368 more)
build_overrides/: glslang.gni  spirv_tools.gni
ctests/: CMakeLists.txt
ctests/client-package/: CMakeLists.txt  test-glslang-default-resource-limits.cpp  test-glslang.cpp  test-spirv.cpp  test-spvremapper.cpp
glslang/: CMakeLists.txt  glslang.js.cpp  glslang.pc.cmake.in  glslang.pc.in  glslang.pre.js  updateGrammar
glslang/MachineIndependent/: CMakeLists.txt  Constant.cpp  InfoSink.cpp  Initialize.cpp  Initialize.h  IntermTraverse.cpp  Intermediate.cpp  Language.cpp  Language.h  LiveTraverser.h  MMap.h  Makefile  ParseContextBase.cpp  ParseHelper.cpp  ParseHelper.h  PoolAlloc.cpp  QualifierAlive.cpp  QualifierAlive.h  RemoveTree.cpp  RemoveTree.h  Scan.cpp  Scan.h  ScanContext.h  ShaderLang.cpp  SpirvIntrinsics.cpp  SymbolTable.cpp  SymbolTable.h  Versions.cpp  Versions.h  attribute.cpp  attribute.h  gl_types.h  glslang.l  glslang.m4  glslang.y  glslang_angle.y  glslang_angle_tab.cpp  glslang_angle_tab.cpp.h  glslang_tab.cpp  glslang_tab.cpp.h  (+12 more)
glslang/MachineIndependent/preprocessor/: CMakeLists.txt  Makefile  Pp.cpp  PpAtom.cpp  PpContext.cpp  PpContext.h  PpMemory.cpp  PpScanner.cpp  PpSymbols.cpp  PpTokens.cpp  PpTokens.h  atom.c  atom.h  compile.h  cpp.c  cpp.h  cppstruct.c  memory.c  memory.h  parser.h  preprocess.h  scanner.c  scanner.h  slglobals.h  symbols.c  symbols.h  tokens.c  tokens.h
glslang/OSDependent/Unix/: CMakeLists.txt  Makefile  ossource.cpp
glslang/OSDependent/Web/: CMakeLists.txt  glslang.js.cpp
glslang/OSDependent/Windows/: CMakeLists.txt  main.cpp  osinclude.h  ossource.cpp
glsld/: CMakeLists.txt  compile_compute_shader.cc  doc.cc  doc.hpp  glsld.cc  initialize.json  protocol.cc  protocol.hpp  server.cc  server.hpp  symbol.cc  symbol.hpp  test_protocol.cc  workspace.cc  workspace.hpp
gn_scripts/: glslang_overrides_with_defaults.gni
gtests/: AST.FromFile.cpp  CMakeLists.txt  Config.FromFile.cpp  Discard.cpp  GlslMapIO.FromFile.cpp  HexFloat.cpp  Hlsl.FromFile.cpp  Initializer.h  InvertY.cpp  Link.FromFile.Vk.cpp  Link.FromFile.cpp  Mutex.Test.cpp  Mutex.h  Pp.FromFile.cpp  README.md  Remap.FromFile.cpp  Spv.FromFile.cpp  SpvDebugInfoTest.cpp  SpvPatternTest.cpp  StructName.FromFile.cpp  StructName.cpp  TestFixture.cpp  TestFixture.h  VkRelaxed.FromFile.cpp  main.cpp
hlsl/: CMakeLists.txt  hlslAttributes.cpp  hlslAttributes.h  hlslGrammar.cpp  hlslGrammar.h  hlslLanguage.cpp  hlslOpMap.cpp  hlslParseHelper.cpp  hlslParseHelper.h  hlslParseables.cpp  hlslParseables.h  hlslScanContext.cpp  hlslScanContext.h  hlslTokenStream.h  hlslTokens.h  stub.cpp
ndk_test/: Android.mk  test.cpp
tools/: bison.hairy  bison.simple
(+87 files in other folders)
